WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135738
[mac] Dynamically update serviceability when the set of services changes
https://bugs.webkit.org/show_bug.cgi?id=135738
Summary
[mac] Dynamically update serviceability when the set of services changes
Tim Horton
Reported
2014-08-07 19:38:47 PDT
<
rdar://problem/17533459
>
Attachments
patch
(10.07 KB, patch)
2014-08-07 19:45 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
rebase
(10.23 KB, patch)
2014-08-07 19:48 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(10.82 KB, patch)
2014-08-08 09:56 PDT
,
Tim Horton
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-08-07 19:45:08 PDT
Created
attachment 236253
[details]
patch
Tim Horton
Comment 2
2014-08-07 19:48:05 PDT
Created
attachment 236254
[details]
rebase
WebKit Commit Bot
Comment 3
2014-08-07 19:48:58 PDT
Attachment 236254
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ServicesController.mm:80: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4
2014-08-07 20:55:26 PDT
Comment on
attachment 236254
[details]
rebase View in context:
https://bugs.webkit.org/attachment.cgi?id=236254&action=review
> Source/WebKit2/UIProcess/WebContext.cpp:-92 > > -#if ENABLE(SERVICE_CONTROLS) > -#include "ServicesController.h" > -#endif
I see, this was here because the header is in a directory that isn't in the search path for the other ports. I will undo this part!
Tim Horton
Comment 5
2014-08-08 09:26:49 PDT
Comment on
attachment 236254
[details]
rebase Going to improve this a little.
Tim Horton
Comment 6
2014-08-08 09:56:19 PDT
Created
attachment 236284
[details]
patch
WebKit Commit Bot
Comment 7
2014-08-08 09:57:20 PDT
Attachment 236284
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ServicesController.mm:80: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 8
2014-08-08 15:40:52 PDT
Comment on
attachment 236284
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236284&action=review
> Source/WebKit2/UIProcess/mac/ServicesController.mm:134 > + WTFLogAlways("refreshed %d", m_hasSelectionServices);
:(
Tim Horton
Comment 9
2014-08-08 16:33:26 PDT
http://trac.webkit.org/changeset/172366
Tim Horton
Comment 10
2014-08-08 18:15:33 PDT
32-bit build fix
http://trac.webkit.org/changeset/172369
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug