Source/WebKit2/UIProcess/mac/WebContextMenuProxyMac.mm
@@ -31,6 +31,7 @@
 #import "DataReference.h"
 #import "MenuUtilities.h"
 #import "PageClientImpl.h"
+#import "ServicesController.h"
 #import "ShareableBitmap.h"
 #import "StringUtilities.h"
 #import "WebContext.h"
@@ -412,11 +413,10 @@ void WebContextMenuProxyMac::setupServicesMenu(const ContextMenuContextData& con
         }
     }
 
-    // If there is no services menu, then the existing services on the system have changed.
-    // Ask the UIProcess to refresh that list of services.
-    // If <rdar://problem/16776831> is resolved then we can more accurately keep the list up to date without this call.
+    // If there is no services menu, then the existing services on the system have changed, so refresh that list of services.
+    // If <rdar://problem/17954709> is resolved then we can more accurately keep the list up to date without this call.
     if (!m_servicesMenu)
-        m_page->process().context().refreshExistingServices();
+        ServicesController::shared().refreshExistingServices();
 }
 
 void WebContextMenuProxyMac::clearServicesMenu()
